--- a/src/markup/index.html
+++ b/src/markup/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>React with Webpack</title>
+  <!-- <link href="/style.css" rel="stylesheet"></link> -->
 </head>
 <body>
   <div id="app"></div>
