add test coverage :joy:

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
   <!-- <link href="/style.css" rel="stylesheet"></link> -->
 </head>
 <body>
-  <div id="app"></div>
+  <div id="root"></div>
 </body>
 </html>
